--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,106 @@
-body {
-  background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
+html, body {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  background-color: #9D684B;
 }
+
+body {
+  position: absolute;
+  left: 0%;
+  bottom: 0%;
+  top: 0%;
+}
+main {
+  height: 100%;
+  width: 70%;
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.hidden {
+  display: none;
+}
+-------------------------------HEADER ELEMENTS------------------------------- 
+
+header{
+  display: flex;
+  position: absolute;
+  left: 0%;
+  right: 0%;
+  top: 0%;
+}
+ 
+ .header-container {
+   display: flex;
+   flex-direction: row;
+   align-items: center;
+   justify-content: space-between;
+  }
+  
+  .header-title {
+    display: flex;
+    position: relative;
+    width: 300px;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: black;
+  }
+  
+  .logo-image{
+    height: 200px;
+    width: 300px;
+  }
+  
+  -------------------------------NAVIGATION ELEMENTS------------------------------- 
+  
+  .nav-section {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+  }
+  .nav-section {
+    height: 100vh;
+    width: 20%;
+    padding: 10px;
+    background-color: #9D956C;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .trip-form {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: stretch;
+    justify-content: space-evenly;
+    align-items: stretch;
+  }
+  
+  .estimated-button-container {
+    display: flex;
+    padding-top: 10px;
+  }
+  
+  .navigation-user-card {
+    display: flex;
+    padding-top: 10px;
+    background-color: #D9D9D9;
+    flex-direction: column;
+    padding: 5px;
+    margin-top: 50px;
+    
+  }
+  .header-image {
+    background-image: url("../images/suitcase.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+    background-size: cover;
+    height: 13%;
+    width: 100%;
+  }
