--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,10 +1,11 @@
-html, body {
+html,
+body {
   position: absolute;
   width: 100%;
   height: 100%;
   padding: 0;
   margin: 0;
-  background-color: #9D684B;
+  background-color: #80B0A4;
 }
 
 body {
@@ -13,6 +14,7 @@ body {
   bottom: 0%;
   top: 0%;
 }
+
 main {
   height: 100%;
   width: 70%;
@@ -24,83 +26,155 @@ main {
 .hidden {
   display: none;
 }
+
 -------------------------------HEADER ELEMENTS------------------------------- 
 
-header{
+header {
   display: flex;
   position: absolute;
   left: 0%;
   right: 0%;
   top: 0%;
 }
- 
- .header-container {
-   display: flex;
-   flex-direction: row;
-   align-items: center;
-   justify-content: space-between;
-  }
-  
-  .header-title {
+
+.header-container {
     display: flex;
-    position: relative;
-    width: 300px;
-    top: 60%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: black;
-  }
-  
-  .logo-image{
-    height: 200px;
-    width: 300px;
-  }
-  
-  -------------------------------NAVIGATION ELEMENTS------------------------------- 
-  
-  .nav-section {
-    display: flex;
-    flex-direction: column;
-    padding: 10px;
-  }
-  .nav-section {
-    height: 100vh;
-    width: 20%;
-    padding: 10px;
-    background-color: #9D956C;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .trip-form {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-content: stretch;
+    flex-direction: column-reverse;
+    align-items: flex-end;
+    align-content: center;
     justify-content: space-evenly;
-    align-items: stretch;
-  }
-  
-  .estimated-button-container {
-    display: flex;
-    padding-top: 10px;
-  }
-  
-  .navigation-user-card {
-    display: flex;
-    padding-top: 10px;
-    background-color: #D9D9D9;
-    flex-direction: column;
-    padding: 5px;
-    margin-top: 50px;
-    
-  }
-  .header-image {
-    background-image: url("../images/suitcase.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    position: relative;
-    background-size: cover;
-    height: 13%;
-    width: 100%;
-  }
+    flex-wrap: wrap;
+}
+/* 
+.header-title {
+  background-color: #9D956C;
+  display: flex;
+  position: relative;
+  width: 300px;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: black;
+} */
+
+.logo-image {
+  display: flex;
+  height: 200px;
+  width: 300px;
+}
+
+.header-image {
+  /* background-image: url("../images/suitcase.jpg"); */
+  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
+  background-size: cover;
+  background-color: #37261f;
+  height: 13%;
+  width: 100%;
+}
+
+
+-------------------------------NAVIGATION ELEMENTS------------------------------- 
+.nav-section {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+}
+
+.nav-section {
+  height: 100vh;
+  width: 20%;
+  padding: 10px;
+  background-color: #D6742B;
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
+}
+
+.trip-form {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: stretch;
+  justify-content: space-evenly;
+  align-items: stretch;
+}
+
+.estimated-button-container {
+  display: flex;
+  padding-top: 10px;
+}
+
+.navigation-user-card {
+  display: flex;
+  padding-top: 10px;
+  background-color: #D9D9D9;
+  flex-direction: column;
+  padding: 10px;
+  margin-top: 50px;
+
+}
+
+
+-------------------------------Main Card Section------------------------------- 
+
+.all-trips {
+  display: flex;
+}
+
+.main-title {
+  display: flex;
+  justify-content: center;
+}
+
+.main-section-container {
+  display: flex;
+}
+
+.main-button {
+  background-color: #D9D9D9;
+}
+
+.main-container-buttons {
+  display: flex;
+  padding: 5px;
+  justify-content: center;
+}
+
+.main-button {
+  width: 125px;
+  margin: 10px;
+}
+
+.card-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-column-gap: 4%;
+  grid-row-gap: 7%;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  background-color: #80B0A4;
+  /* background-color: #5bb390; */
+  justify-content: flex-start;
+  height: 100%;
+  width: 100%;
+  border: 2px solid grey;
+  border-radius: 2px;
+  margin-bottom: 5px;
+  padding: 5%;
+  background-color: #D9D9D9
+}
+
+img {
+  height: 150px;
+  width: 100%;
+  margin-bottom: 10%;
+}
+
+.card-text {
+  background-color: #D9D9D9;
+}
