Update css for new color scheme retro vibe

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,7 +5,8 @@ body {
   height: 100%;
   padding: 0;
   margin: 0;
-  background-color: #80B0A4;
+  background-color: #026F95;
+  font-family: 'Quicksand', sans-serif;
 }
 
 body {
@@ -27,66 +28,58 @@ main {
   display: none;
 }
 
+
 -------------------------------HEADER ELEMENTS------------------------------- 
+.header-container {
+  display: flex;
+}
+
+.logo {
+  display: flex;
+}
+
+.header{
+      display: flex;
+    flex-direction: row-reverse;
+    align-content: space-between;
+    justify-content: center;
+}
 
 header {
-  display: flex;
-  position: absolute;
-  left: 0%;
-  right: 0%;
-  top: 0%;
-}
-
-.header-container {
-    display: flex;
-    flex-direction: column-reverse;
-    align-items: flex-end;
-    align-content: center;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-}
-/* 
-.header-title {
-  background-color: #9D956C;
-  display: flex;
   position: relative;
-  width: 300px;
-  top: 60%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: black;
-} */
-
-.logo-image {
   display: flex;
-  height: 200px;
-  width: 300px;
-}
-
-.header-image {
-  /* background-image: url("../images/suitcase.jpg"); */
-  background-position: center;
-  background-repeat: no-repeat;
-  position: relative;
-  background-size: cover;
   background-color: #37261f;
-  height: 13%;
+  height: 18%;
   width: 100%;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  align-content: stretch;
+  justify-content: center;
+  align-items: center;
 }
 
+.header-stripes{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: flex-end;
+}
 
--------------------------------NAVIGATION ELEMENTS------------------------------- 
-.nav-section {
+-------------------------------NAVIGATION ELEMENTS------------------------------- .nav-section {
   display: flex;
   flex-direction: column;
   padding: 10px;
+}
+
+.nav-greeting {
+  color: #FEE4B4;
 }
 
 .nav-section {
   height: 100vh;
   width: 20%;
   padding: 10px;
-  background-color: #D6742B;
+  background-color: #FF6A2C;
   display: flex;
   flex-direction: column;
   margin: 10px;
@@ -116,16 +109,22 @@ header {
 
 }
 
+.navigation-user-card{
+  color: #37261f;
+}
 
--------------------------------Main Card Section------------------------------- 
-
-.all-trips {
+.navigation-user-card:hover {
+  background-color: #80B0A4;
+  transition: 0.7s;
+}
+-------------------------------Main Card Section------------------------------- .all-trips {
   display: flex;
 }
 
 .main-title {
   display: flex;
   justify-content: center;
+  color: #FF6A2C;
 }
 
 .main-section-container {
@@ -135,10 +134,13 @@ header {
 .main-button {
   background-color: #D9D9D9;
 }
-
+.main-button:hover {
+  background-color: #FF6A2C;
+  transition:0.7s;
+}
 .main-container-buttons {
   display: flex;
-  padding: 5px;
+  padding: 10px;
   justify-content: center;
 }
 
