--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -24,10 +24,6 @@ main {
   flex-direction: column;
 }
 
-.hidden {
-  display: none;
-}
-
 
 -------------------------------HEADER ELEMENTS------------------------------- 
 .header-container {
@@ -122,7 +118,7 @@ header {
 }
 
 .estimated-button:hover, .submit-button:hover, .navigation-user-card:hover  {
- background-color: #80B0A4;
+  background-color: #80B0A4;
   transition: 0.7s;
 }
 
@@ -144,8 +140,8 @@ header {
 }
 
 .error-handling-main {
-   background-color: #D9D9D9;
-   color: #FF6A2C;
+  background-color: #D9D9D9;
+  color: #FF6A2C;
 }
 
 .main-title {
@@ -207,3 +203,53 @@ img {
 .card-text {
   background-color: #D9D9D9;
 }
+
+  -------------------------------Login Section------------------------------- 
+
+  .login-page{
+    display: flex;
+  }
+
+  .container-login-section {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin-left: 50px;
+    align-content: stretch;
+    justify-content: center;
+    align-items: center;
+  }
+
+
+  .login-title {
+    display: flex;
+    color:  #FF6A2C;
+  }
+  
+  .login-container {
+    margin: 30px;
+  }
+  
+  .login-button {
+    background-color: #FF6A2C;
+    width: 100px;
+  }
+  
+  .login-username-container, .login-password {
+    margin-bottom:30px;
+  }
+  
+  
+  .image-login-page {
+    display: flex;
+    height: 100%;
+    width: 30%
+  }
+  
+  .image-login {
+    height: 300px !important;
+  }
+  .hidden {
+    display: none;
+  }
+  
