--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,6 +8,7 @@ body {
   background-color: #026F95;
   font-family: 'Quicksand', sans-serif;
 }
+
 h1 {
   font-size: 2.2em;
 }
@@ -40,53 +41,59 @@ main {
   flex-direction: column;
 }
 
-
 -------------------------------HEADER ELEMENTS------------------------------- 
-.header-container {
+
+
+.header-container, .logo, .header, .header-title {
   display: flex;
 }
 
 .logo {
-  display: flex;
+  height: 100%;
+  width: 125%;
 }
 
-.header{
-  display: flex;
+.header {
   flex-direction: row-reverse;
   align-content: space-between;
   justify-content: center;
 }
 
-.header-title{
-  size: 100px;
-  color:#FF6A2C;
+.header-title {
+  color: #37261f;
   font-weight: bold;
+  margin-top: -30px;
+  font-size: 1.3em;
+
+}
+
+.header-stripes {
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+
+.logo-image{
+  width: 95%;
+  height: 175px;
+  margin-top: -20px;
+  margin-bottom: -10px;
 }
 
 header {
   position: relative;
   display: flex;
   background-color: #37261f;
-  height: 18%;
+  height: 20%;
   width: 100%;
   flex-wrap: nowrap;
   flex-direction: row;
   align-content: stretch;
   justify-content: center;
-  align-items: center;
-}
-
-.header-stripes{
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
+  align-items: flex-start;
 }
 
 
--------------------------------NAVIGATION ELEMENTS------------------------------- 
-
-
-.estimated-quote-section {
+-------------------------------NAVIGATION ELEMENTS------------------------------- .estimated-quote-section {
   background-color: white;
 }
 .nav-section {
@@ -133,12 +140,14 @@ header {
   margin-top: 50px;
 }
 
-.estimated-button:hover, .submit-button:hover, .navigation-user-card:hover  {
+.estimated-button:hover,
+.submit-button:hover,
+.navigation-user-card:hover {
   background-color: #80B0A4;
   transition: 0.7s;
 }
 
-.navigation-user-card{
+.navigation-user-card {
   color: #37261f;
 }
 
@@ -151,6 +160,7 @@ header {
   font-weight: bolder;
   color: black;
 }
+
 -------------------------------Main Card Section------------------------------- .all-trips {
   display: flex;
 }
@@ -160,8 +170,8 @@ header {
   color: #FF6A2C;
 }
 
-.card-holder-img{
-  width:100%;
+.card-holder-img {
+  width: 100%;
 }
 
 .main-title {
@@ -177,10 +187,12 @@ header {
 .main-button {
   background-color: #D9D9D9;
 }
+
 .main-button:hover {
   background-color: #FF6A2C;
-  transition:0.7s;
+  transition: 0.7s;
 }
+
 .main-container-buttons {
   display: flex;
   padding: 10px;
@@ -224,109 +236,139 @@ img {
   background-color: #D9D9D9;
 }
 
-  -------------------------------Login Section------------------------------- 
+-------------------------------Login Section-------------------------------
 
-  /* .login-page{
-    display: flex;
-        display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    align-content: stretch;
-    justify-content: center;
-  }
+/* .login-page-stripes {
+  display: flex;
+  height: 100%;
+  width: 30%
+}
 
-  .container-login-section {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    margin-left: 50px;
-    align-content: stretch;
-    justify-content: center;
-    align-items: center;
-  }
+.image-stripes {
+  height: 100vh;
+  margin-right: 200px;
+}
+
+.container-login-section {
+  margin-top: 0px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  margin-left: 50px;
+  align-content: stretch;
+  justify-content: center;
+  align-items: center;
+}
+
+.login-title {
+  display: flex;
+  color: #FF6A2C;
+  font-family: 'Kool Beans', sans-serif;
+  font-weight: 100;
+                                      
+}
+
+.login-container {
+  margin: 30px;
+  color:antiquewhite;
+}
+
+.login-button {
+  background-color: #FF6A2C;
+  width: 100px;
+}
+
+.login-button:hover {
+  background-color: #06265a;
+  color: #FF6A2C;
+}
+
+.login-username-container,
+.login-password {
+  margin-bottom: 30px;
+}
+
+.time-to-travel {
+  display: flex;
+}
+
+.login-page {
+  display: flex;
+  justify-content: flex-start;
+}
 
 
-  .login-container {
-    margin: 30px;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-content: stretch;
-    align-items: center;
-  }
-  
-  .login-button {
-    background-color: #FF6A2C;
-    width: 100px;
-  }
-  
+.login-page {
+  display: flex;
+  background-image: url("../images/plane-blue.png");
+}
+
+.hidden {
+  display: none;
+}
+ */
 
 
-  
-  .image-login-page {
-    display: flex;
-    height: 100%;
-    width: 30%
-  }
-  
-  .image-login {
-    height: 300px !important;
-  } */
 
-  .login-page-stripes{
-    display: flex;
-    height: 100%;
-    width: 30%
-  }
-  
-  .image-stripes{
-    height: 100vh;
-    margin-right: 200px;
-  }
-  
-  .container-login-section {
-    margin-top: -150px;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    margin-left: 50px;
-    align-content: stretch;
-    justify-content: center;
-    align-items: center;
-  }
 
-  .login-title {
-    display: flex;
-    color:  #FF6A2C;
-  }
-  
-  
-  .login-container {
-    margin: 30px;
-  }
-  
-  .login-button {
-    background-color: #FF6A2C;
-    width: 100px;
-  }
 
-  .login-button:hover {
-    background-color: #06265a;
-    color: #FF6A2C;
-  }
-  .login-username-container, .login-password {
-    margin-bottom:30px;
-  }
+ .login-page-stripes {
+  display: flex;
+  height: 100%;
+  width: 20%;
+}
 
-  .time-to-travel {
-    display:flex;
-  }
-  .login-page {
-    display:flex;
-    justify-content: flex-start;
-  }
-  
-  .hidden {
-    display: none;
-  }
+.image-stripes {
+  height: 100vh;
+}
+
+.container-login-section {
+  margin-top: 0px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  margin-top:100px;
+  margin-left: 200px;
+  justify-content: center;
+  align-items: center;
+}
+
+.login-title {
+  display: flex;
+  color: #FF6A2C;
+  font-family: 'Kool Beans', sans-serif;
+}
+
+.login-container {
+  margin: 30px;
+  color: antiquewhite;
+}
+
+.login-button {
+  background-color: #FF6A2C;
+  width: 100px;
+}
+
+.login-button:hover {
+  background-color: #06265a;
+  color: #FF6A2C;
+}
+
+.login-username-container,
+.login-password {
+  margin-bottom: 30px;
+}
+
+.time-to-travel {
+  display: flex;
+}
+
+.login-page {
+  display: flex;
+  justify-content: flex-start;
+  background-image: url("../images/plane-blue.png");
+}
+
+.hidden {
+  display: none;
+}
