Add styling to error handling

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -191,7 +191,8 @@ header {
   }
 }
 
--------------------------------Main Card Section------------------------------- .main-section-container {
+-------------------------------Main Card Section------------------------------- 
+.main-section-container {
   height: 80%;
 }
 
