--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -49,7 +49,7 @@ main {
 }
 
 .logo {
-  position: relative;
+  position: fixed;
   height: auto;
   max-width: 125%;
 }
@@ -58,6 +58,8 @@ main {
   flex-direction: row-reverse;
   align-content: space-between;
   justify-content: center;
+  width:100%;
+  height:10%;
 }
 
 .header-title {
@@ -75,7 +77,6 @@ main {
 
 .logo-image {
   width: 100%;
-  height: 175px;
   margin-top: -20px;
   margin-bottom: -10px;
 }
