--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -287,6 +287,14 @@ img {
   display: flex;
 }
 
+.login-page {
+  display:flex;
+  height:100vh;
+  background-image: url("../images/plane-blue.png");
+  background-repeat: no-repeat;
+   background-position: right center; 
+}
+
 @media (max-width: 1000px) {
   .container-login-section {
     margin-left: 100px;
@@ -295,8 +303,8 @@ img {
 
 @media (max-width: 768px) {
   .login-page-stripes {
-    width: 100%;
-    height: 100%;
+    width: 30%;
+    height: 50%;
   }
 
   .image-stripes {
@@ -319,13 +327,18 @@ img {
 }
 
 @media (max-width: 480px) {
+
+  .login-page {
+      background-image: none;
+  }
   .login-title {
-    font-size: 20px;
+    font-size: 3rem;
   }
 
   .login-username-container,
   .login-password {
-    margin-bottom: 10px;
+    font-size: large;
+    margin-bottom: 20px;
   }
 
   .login-button {
@@ -333,13 +346,6 @@ img {
   }
 }
 
-.login-page {
-  display:flex;
-  height:100vh;
-  background-image: url("../images/plane-blue.png");
-  background-repeat: no-repeat;
-   background-position: right center; 
-}
 .login-error  {
   margin: 10px;
 }
